feat: Apply Week 4 threshold tuning based on diagnostic analysis
Configuration Changes:
- config/early_exit.yaml: min_exit_confidence 0.80 → 0.70
- QUALITY_MIN_OVERALL will be set to 0.55 via env var (was 0.65)

New Validation Script:
- scripts/run_tuned_validation.py
- Tests 4 configurations: baseline, quality (0.55), early exit (0.70), combined
- Auto-generates deployment recommendation based on results
- Saves JSON results to benchmarks/

Expected Impact:
- Bypass rate: 0% → 20-30%
- Exit rate: 0% → 15-25%
- Combined improvement: 1.2% → 45-60%

Next: Run tuned validation to confirm threshold adjustments work

--- a/config/early_exit.yaml
+++ b/config/early_exit.yaml
@@ -9,7 +9,7 @@ enabled: true
 # Global settings
 global:
   # Minimum confidence required to trigger early exit
-  min_exit_confidence: 0.80
+  min_exit_confidence: 0.70 # Tuned from 0.80 for Week 4 validation
 
   # Log all early exit decisions
   log_exit_decisions: true
