--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 # Pytest configuration for Ultimate Discord Intelligence Bot
 
 # Test discovery
-testpaths = tests
+testpaths = tests tests_new
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
@@ -20,7 +20,6 @@ addopts =
     --cov-fail-under=80
     --durations=10
     --maxfail=5
-    -n auto
 
 # Markers
 markers =
@@ -77,21 +76,21 @@ asyncio_mode = auto
 # -n 4 for 4 workers
 
 # Test collection
-collect_ignore = [
-    "setup.py",
-    "build",
-    "dist",
-    "*.egg-info",
-    "venv",
-    "env",
-    ".venv",
-    ".env",
-    "node_modules",
-    ".git",
-    ".pytest_cache",
-    "htmlcov",
-    ".coverage",
-    "coverage.xml"
+norecursedirs =
+    setup.py
+    build
+    dist
+    *.egg-info
+    venv
+    env
+    .venv
+    .env
+    node_modules
+    .git
+    .pytest_cache
+    htmlcov
+    .coverage
+    coverage.xml
 
 # Custom test configuration
 # Mock external APIs by default
