feat: implement AI/ML/RL improvements with trajectory feedback loop
- Add comprehensive RL-based routing for models, tools, and agents
- Implement trajectory feedback loop for continuous learning
- Add governance policy tool with content safety checks
- Integrate memory reranking and semantic routing cache
- Add backpressure coordination for system resilience
- Include extensive test coverage for all new components
- Add documentation and runbooks for RL feedback system

--- a/config/deprecations.yaml
+++ b/config/deprecations.yaml
@@ -1,6 +1,9 @@
 # Deprecations Configuration
 # TODO: Implement deprecation tracking and management
 
+# Minimal list required by scripts/check_deprecations.py
+flags: []
+
 # Deprecation tracking
 tracking:
   enabled: true
