feat: implement comprehensive technology stack enhancements
- Add Playwright browser automation for dynamic content scraping
- Integrate Arq task queue system for background job processing
- Add OpenAI Moderation API for content safety screening
- Integrate Neo4j graph database for relationship analysis
- Add LlamaIndex RAG service for intelligent retrieval
- Implement Reddit and Twitter API integrations
- Add WebSocket support for real-time streaming
- Comprehensive test coverage and documentation

Implements Phases 1-9 of the Prioritized Implementation Roadmap:
- Phase 1: Playwright Automation (TODOs 1-8)
- Phase 2: Arq Task Queue (TODOs 9-16)
- Phase 3: Content Moderation (TODOs 17-21)
- Phase 4: Neo4j Graph Database (TODOs 22-26)
- Phase 5: LlamaIndex RAG (TODOs 27-29)
- Phase 6: Social Media Expansion (TODOs 30-33)
- Phase 7: Real-Time Streaming (TODOs 34-37)
- Phase 8: LLM Observability (TODOs 38-40)
- Phase 9: Infrastructure Polish (TODOs 41-50)

Total: 7,300+ lines of code, tests, and documentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,6 +163,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.lock
 
+      - name: Install Playwright browsers
+        run: |
+          pip install playwright
+          playwright install chromium
+
       - name: Run integration tests
         env:
           POSTGRES_URL: postgresql://postgres:postgres@localhost:5432/test_db
