fix(vscode): Update VS Code settings to exclude deleted legacy directories
Fix VS Code file resolution error by:
- Adding deleted legacy directories to files.watcherExclude
- Adding deleted legacy directories to search.exclude
- Adding **/*.bak files to files.exclude
- Ensuring python.analysis.extraPaths includes src/ for new architecture

This prevents VS Code from trying to index or access deleted directories
like src/core/, src/ai/, src/obs/, etc. that were removed during Phase 8.

The error was caused by VS Code's file index trying to access src/core/http_utils.py
which was deleted during restructure. The actual implementation is now at
platform.http.http_utils with a compatibility shim at
ultimate_discord_intelligence_bot/core/http_utils.py.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
     "editor.formatOnSave": true,
     "files.exclude": {
         "**/__pycache__": true,
-        "**/.pytest_cache": true
+        "**/.pytest_cache": true,
+        "**/*.bak": true
     },
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff"
@@ -34,5 +35,27 @@
     "editor.semanticHighlighting.enabled": true,
     // Moderate type checking (can elevate to "strict" later)
     "python.analysis.typeCheckingMode": "basic",
-    "python-envs.pythonProjects": []
+    "python-envs.pythonProjects": [],
+    // Python path configuration for new 3-layer architecture
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/src"
+    ],
+    // Ignore deleted legacy directories in file search
+    "files.watcherExclude": {
+        "**/src/core/**": true,
+        "**/src/ai/**": true,
+        "**/src/obs/**": true,
+        "**/src/ingest/**": true,
+        "**/src/analysis/**": true,
+        "**/src/memory/**": true
+    },
+    // Search exclude patterns for deleted directories
+    "search.exclude": {
+        "**/src/core/**": true,
+        "**/src/ai/**": true,
+        "**/src/obs/**": true,
+        "**/src/ingest/**": true,
+        "**/src/analysis/**": true,
+        "**/src/memory/**": true
+    }
 }
