docs: Update VS Code fix documentation with files.exclude details
Document that deleted legacy directories are excluded in three places:
- files.exclude (file explorer)
- files.watcherExclude (file watcher)
- search.exclude (search results)

This prevents VS Code from trying to access deleted files like
src/core/http_utils.py during workspace operations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,14 @@
     "files.exclude": {
         "**/__pycache__": true,
         "**/.pytest_cache": true,
-        "**/*.bak": true
+        "**/*.bak": true,
+        "**/src/core/**": true,
+        "**/src/ai/**": true,
+        "**/src/obs/**": true,
+        "**/src/ingest/**": true,
+        "**/src/analysis/**": true,
+        "**/src/memory/**": true,
+        "**/src/services/**": true
     },
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff"
