--- a/.gitignore
+++ b/.gitignore
@@ -44,10 +44,11 @@ coverage/
 *.cover
 *.py,cover
 
-# Caches
+# Caches (but allow platform cache modules)
 cache/
 .cache/
 **/.ipynb_checkpoints
+!src/platform/cache/
 
 # IDE / editor
 .idea/
